--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,12 @@
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
         <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
-
+        
         <script src="/js/app.js"></script>
+        <script src="/js/authController.js"></script>
     </head>
 
-    <body>
+    <body ng-controller="authController">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,36 +44,14 @@
                 </ul>
                 
                 <div class="navbar-right">
-                    <button type="button" ng-hide="userCredential" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#signInModal">Sign in</button>
-                    <button type="button" ng-hide="userCredential" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#signUpModal">Sign up</button>
-                    <button type="button" ng-show="userCredential" class="btn btn-primary navbar-btn" ng-click="auth.$signOut()">Sign Out</button>
+                    <button type="button" ng-hide="getAuth()" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#signInModal">Sign in</button>
+                    <button type="button" ng-show="getAuth()" class="btn btn-primary navbar-btn" ng-click="signOut()">Sign Out</button>
                 </div>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
 
-        <div id="signUpModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Sign Up With : </h4>
-                </div>
-                <div class="modal-body text-center">
-                    <button class="btn btn-danger btn-lg"><i class="fa fa-google" aria-hidden="true"></i> Google</button>
-                    <button class="btn btn-primary btn-lg"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div id="signInModal" class="modal fade" role="dialog">
+        <div id="signInModal" class="modal fade" role="dialog" >
             <div class="modal-dialog">
 
                 <!-- Modal content-->
@@ -82,7 +61,7 @@
                     <h4 class="modal-title">Sign In With : </h4>
                 </div>
                 <div class="modal-body text-center">
-                    <button class="btn btn-danger btn-lg"><i class="fa fa-google" aria-hidden="true"></i> Google</button>
+                    <button class="btn btn-danger btn-lg" ng-click="signInWithGoogle()"><i class="fa fa-google" aria-hidden="true"></i> Google</button>
                     <button class="btn btn-primary btn-lg"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</button>
                 </div>
                 <div class="modal-footer">
