add facebook authentication

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <button class="btn btn-danger btn-lg" ng-click="signInWithGoogle()"><i class="fa fa-google" aria-hidden="true"></i> Google</button>
-                    <button class="btn btn-primary btn-lg"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</button>
+                    <button class="btn btn-primary btn-lg" ng-click="signInWithFacebook()"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
