--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
         
         <script src="/js/app.js"></script>
+        <script src="/js/user.service.js"></script>
         <script src="/js/authController.js"></script>
+        <script src="/js/registerController.js"></script>
     </head>
 
     <body ng-controller="authController">
@@ -44,6 +46,7 @@
                 </ul>
                 
                 <div class="navbar-right">
+                    <span ng-show="getAuth()">Signed in as {{displayName}}</span>
                     <button type="button" ng-hide="getAuth()" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#signInModal">Sign in</button>
                     <button type="button" ng-show="getAuth()" class="btn btn-primary navbar-btn" ng-click="signOut()">Sign Out</button>
                 </div>
