--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
         <script src="/js/user.service.js"></script>
         <script src="/js/authController.js"></script>
         <script src="/js/registerController.js"></script>
+        <script src="/js/book.service.js"></script>
+        <script src="/js/addBookController.js"></script>
     </head>
 
     <body ng-controller="authController">
@@ -41,6 +43,7 @@
                     </div>
                     <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Search</button>
                 </form>
+
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">About Us</a></li>
                 </ul>
@@ -49,6 +52,9 @@
                     <span ng-show="getAuth()">Signed in as {{displayName}}</span>
                     <button type="button" ng-hide="getAuth()" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#signInModal">Sign in</button>
                     <button type="button" ng-show="getAuth()" class="btn btn-primary navbar-btn" ng-click="signOut()">Sign Out</button>
+                </div>
+                <div class="nav navbar-nav navbar-right">
+                    <a href="#!/addbukz" class="btn btn-info" role="button">add-book</a>
                 </div>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
