--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <script src="/js/user.service.js"></script>
         <script src="/js/authController.js"></script>
         <script src="/js/registerController.js"></script>
+        <script src="/js/homeController.js"></script>
     </head>
 
     <body ng-controller="authController">
