--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
         <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
         
+        <link rel="stylesheet" href="/css/homepage.css"/>
+
         <script src="/js/app.js"></script>
         <script src="/js/user.service.js"></script>
         <script src="/js/book.service.js"></script>
