--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <script src="/js/book.service.js"></script>
         <script src="/js/manageBooksController.js"></script>
         <script src="/js/addBookController.js"></script>
+        <script src="/js/bookController.js"></script>
     </head>
 
     <body ng-controller="authController">
