--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
         <link rel="stylesheet" href="/css/homepage.css"/>
         <link rel="stylesheet" href="/css/manageBooks.css"/>
+        <link rel="stylesheet" href="/css/bookInfo.css"/>
         <script src="/js/app.js"></script>
         <script src="/js/user.service.js"></script>
         <script src="/js/book.service.js"></script>
