fix bugs in book.html page

--- a/public/book.html
+++ b/public/book.html
@@ -84,51 +84,55 @@
                 <!-- end row -->
             </div>
             <div role="tabpanel" class="tab-pane" id="details">
-                <br/>
-                <h4>Additional Information</h4>
-                <div class="table-responsive">
-                    <table class="table">
-                        <tbody>
-                            <tr>
-                                <td><b>Title</b>
-                                </td>
-                                <td>{{book.bookName}}</td>
-                                <td><b>Author</b>
-                                </td>
-                                <td>{{book.authorName}}</td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td><b>Price</b>
-                                </td>
-                                <td>{{book.price}}</td>
-                                <td><b>Publication</b>
-                                </td>
-                                <td>{{book.publication}}</td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td><b>Edition</b>
-                                </td>
-                                <td>{{book.edition}}</td>
-                                <td><b>ISBN</b>
-                                </td>
-                                <td>7878787878</td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td><b>Binding</b>
-                                </td>
-                                <td>Papaerback</td>
-                                <td><b>Pages</b>
-                                </td>
-                                <td>300</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="row">
+                    <div class="col-md-12">
+                        <br/>
+                        <h4>Additional Information</h4>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <tbody>
+                                    <tr>
+                                        <td><b>Title</b>
+                                        </td>
+                                        <td>{{book.bookName}}</td>
+                                        <td><b>Author</b>
+                                        </td>
+                                        <td>{{book.authorName}}</td>
+                                    </tr>
+                                </tbody>
+                                <tbody>
+                                    <tr>
+                                        <td><b>Price</b>
+                                        </td>
+                                        <td>{{book.price}}</td>
+                                        <td><b>Publication</b>
+                                        </td>
+                                        <td>{{book.publication}}</td>
+                                    </tr>
+                                </tbody>
+                                <tbody>
+                                    <tr>
+                                        <td><b>Edition</b>
+                                        </td>
+                                        <td>{{book.edition}}</td>
+                                        <td><b>ISBN</b>
+                                        </td>
+                                        <td>7878787878</td>
+                                    </tr>
+                                </tbody>
+                                <tbody>
+                                    <tr>
+                                        <td><b>Binding</b>
+                                        </td>
+                                        <td>Papaerback</td>
+                                        <td><b>Pages</b>
+                                        </td>
+                                        <td>300</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="description">
