--- a/public/addBook.html
+++ b/public/addBook.html
@@ -25,8 +25,27 @@
             <input class="form-control" type="text" ng-model="edition" />
         </div>
         <div class="form-group">
+            <label>Pages : </label>
+            <input class="form-control" type="number" ng-model="pages" />
+        </div>
+        <div class="form-group">
+                <label for="sel1">Binding:</label>
+                <select class="form-control" ng-model="binding">
+                    <option>Papaerback</option>
+                    <option>Hardcover</option>
+                </select>
+        </div>
+        <div class="form-group">
+            <label>ISBN:</label>
+            <input class="form-control" type="number" ng-model="isbn" />
+        </div>
+        <div class="form-group">
             <label>Price : </label>
             <input class="form-control" type="number" ng-model="price" />
+        </div>
+        <div class="form-group">
+            <label>Description:</label>
+                <textarea class="form-control" rows="5" ng-model="descriptions"></textarea>
         </div>
         <input type="submit" class="btn btn-primary" />
         <div ng-show="error" class="alert alert-danger"><strong>Caution : </strong> {{error}}</div>
