--- a/public/book.html
+++ b/public/book.html
@@ -1,7 +1,7 @@
 <section class="container">
     <div class="row">
         <div class="col-md-6">
-            <img ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}" id="book-info-img" />
+            <img style="max-width: 300px; margin: auto;" class="img-responsive" ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}" id="book-info-img" />
         </div>
         <div class="col-md-6">
             <div class="row">
@@ -44,12 +44,12 @@
             <div class="col-md-12">
                 <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active">
-                        <li class="active"><a data-target="#userinfo" aria-controls="userinfo" role="tab" data-toggle="tab">Seller Information</a>
+                        <li class="active"><a href="" data-target="#userinfo" aria-controls="userinfo" role="tab" data-toggle="tab">Seller Information</a>
                         </li>
                     </li>
-                    <li role="presentation"><a data-target="#details" aria-controls="details" role="tab" data-toggle="tab">Details</a>
+                    <li role="presentation"><a href="" data-target="#details" aria-controls="details" role="tab" data-toggle="tab">Details</a>
                     </li>
-                    <li role="presentation"><a data-target="#description" aria-controls="description" role="tab" data-toggle="tab">Description</a>
+                    <li role="presentation"><a href="" data-target="#description" aria-controls="description" role="tab" data-toggle="tab">Description</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
                 <br/>
                 <div class="row">
                     <div class="col-md-4">
-                        <img ng-src="{{owner.userPicture}}" alt="Image for {{owner.userName}}" id="book-info-user-img" class="img-rounded" />
+                        <img style="max-width: 200px; margin: auto;" ng-src="{{owner.userPicture}}" alt="Image for {{owner.userName}}" id="book-info-user-img" class="img-responsive img-rounded" />
                     </div>
                     <div class="col-md-8">
                         <div class="row">
