--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -7,13 +7,13 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-12">
-                    <p><b>BookName:</b>{{book.bookName}}</p>
+                    <p><b>Title:</b>{{book.bookName}}</p>
                 </div>
                 <div class="col-md-12">
-                    <p><b>AuthorName:</b>{{book.authorName}}</p>
+                    <p><b>Author:</b>{{book.authorName}}</p>
                 </div>
                 <div class="col-md-12">
-                    <p><b>price:</b>₹{{book.price}}</p>
+                    <p><b>Price:</b>₹{{book.price}}</p>
                 </div>
                 <div class="col-md-12">
                     <p><b>Edition: </b>{{book.edition}}</p>
