--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
         <link rel="stylesheet" href="/css/homepage.css"/>
-        <link rel="stylesheet" href="/css/manageBooks.css"/>
+        <link rel="stylesheet" href="/css/managebooks.css"/>
         <link rel="stylesheet" href="/css/bookInfo.css"/>
         <script src="/js/app.js"></script>
         <script src="/js/user.service.js"></script>
