--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="/css/homepage.css"/>
         <link rel="stylesheet" href="/css/manageBooks.css"/>
         <link rel="stylesheet" href="/css/bookInfo.css"/>
+        <link rel="stylesheet" href="css/about.css">
         <script src="/js/app.js"></script>
         <script src="/js/user.service.js"></script>
         <script src="/js/book.service.js"></script>
@@ -53,7 +54,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">About Us</a></li>
                 </ul>
-                
+
                 <div class="navbar-right">
                     <span ng-show="getAuth()">Signed in as {{displayName}}</span>
                     <button type="button" ng-hide="getAuth()" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#signInModal">Sign in</button>
