--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -1,8 +1,8 @@
 <section class="container">
-    <div ng-repeat="book in books" >
+    <div ng-repeat="book in books">
         <div class="row">
             <div class="col-md-3 col-md-offset-2">
-                <img style="max-width: 200px" ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}"  class="img-responsive"/>
+                <img style="max-width: 200px" ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}" class="img-responsive" />
             </div>
             <div class="col-md-5 manage-books-detail">
                 <h4><b>Title:</b>{{book.bookName}}</h4>
@@ -13,19 +13,18 @@
                 <p><b>ISBN: </b>{{book.isbn}}</p>
                 <p><b>Binding: </b>{{book.binding}}</p>
                 <p>
-                    <b>Description: </b> 
-                    {{book.descriptions}}
+                    <b>Description: </b> {{book.descriptions}}
                 </p>
                 <div class="manage-books-button-group">
-                    <button class="btn btn-warning" ng-click="myPreBook(book.$id)" data-toggle="modal" data={{book.$id}} data-target="#editBook" >Edit <span class="glyphicon glyphicon-pencil" ></span></button>
-                    <button class="btn btn-danger" data-toggle="modal" data={{book.$id}} data-target="#deleteBook"  ng-click="deleteBook(book.$id)">Remove <span class="glyphicon glyphicon-trash" ></span></button>
+                    <button class="btn btn-warning" ng-click="myPreBook(book.$id)" data-toggle="modal" data={{book.$id}} data-target="#editBook">Edit <span class="glyphicon glyphicon-pencil" ></span></button>
+                    <button class="btn btn-danger" data-toggle="modal" data={{book.$id}} data-target="#deleteBook" ng-click="deleteBook(book.$id)">Remove <span class="glyphicon glyphicon-trash" ></span></button>
                 </div>
             </div>
         </div>
         <hr>
     </div>
     <div class="modal fade" id="deleteBook" role="dialog">
-        <div class="modal-dialog">   
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -42,25 +41,23 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="editBook" role="dialog" tabindex="-1" aria-hidden="true" >
+    <div class="modal fade" id="editBook" role="dialog" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog" style="background-color: white;">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h3>Edit your Book</h3>
             </div>
             <div class="modal-body" role="form">
-        <form ng-submit="editBukz()">
+                <form ng-submit="editBukz()">
                     <div class="form-group">
                         <img id="blah" ng-src="{{bookPicture}}" alt="your image" />
                         <br>
                         <progress value="100" max="100" id="uploader"></progress>
-                        <input ng-model="photo"
-                onchange="angular.element(this).scope().file_changed(this)"
-                type="file" accept="image/*" />
+                        <input ng-model="photo" onchange="angular.element(this).scope().file_changed(this)" type="file" accept="image/*" />
                     </div>
                     <div class="form-group">
                         <label> Book Name : </label>
-                        <input class="form-control" type="text" ng-model="bookName"/>
+                        <input class="form-control" type="text" ng-model="bookName" />
                     </div>
                     <div class="form-group">
                         <label>Author Name : </label>
@@ -75,35 +72,35 @@
                         <input class="form-control" type="text" ng-model="edition" />
                     </div>
                     <div class="form-group">
-            <label>Pages : </label>
-            <input class="form-control" type="number" ng-model="pages" />
-        </div>
-        <div class="form-group">
-                <label for="sel1">Binding:</label>
-                <select class="form-control" ng-model="binding">
+                        <label>Pages : </label>
+                        <input class="form-control" type="number" ng-model="pages" />
+                    </div>
+                    <div class="form-group">
+                        <label for="sel1">Binding:</label>
+                        <select class="form-control" ng-model="binding">
                     <option>Papaerback</option>
                     <option>Hardcover</option>
                 </select>
-        </div>
-        <div class="form-group">
-            <label>ISBN:</label>
-            <input class="form-control" type="number" ng-model="isbn" />
-        </div>
-        <div class="form-group">
-            <label>Price : </label>
-            <input class="form-control" type="number" ng-model="price" />
-        </div>
-        <div class="form-group">
-            <label>Description:</label>
-                <textarea class="form-control" rows="5" ng-model="descriptions"></textarea>
-        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>ISBN:</label>
+                        <input class="form-control" type="number" ng-model="isbn" />
+                    </div>
+                    <div class="form-group">
+                        <label>Price : </label>
+                        <input class="form-control" type="number" ng-model="price" />
+                    </div>
+                    <div class="form-group">
+                        <label>Description:</label>
+                        <textarea class="form-control" rows="5" ng-model="descriptions"></textarea>
+                    </div>
 
                     <div class="modal-footer">
-                            <input type="submit" class="btn btn-primary" ng-click="cancel()"/>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <div ng-show="error" class="alert alert-danger"><strong>Caution : </strong> {{error}}</div>
+                        <input type="submit" class="btn btn-primary" ng-click="cancel()" />
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <div ng-show="error" class="alert alert-danger"><strong>Caution : </strong> {{error}}</div>
                     </div>
-    </form>
+                </form>
             </div>
         </div>
     </div>
