incorporated about page

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                 </form>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#!/about">About Us</a></li>
                 </ul>
 
                 <div class="navbar-right">
