--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
         <link rel="stylesheet" href="/css/homepage.css"/>
         <link rel="stylesheet" href="/css/managebooks.css"/>
-        <link rel="stylesheet" href="/css/bookInfo.css"/>
+        <link rel="stylesheet" href="/css/bookinfo.css"/>
+        <link rel="stylesheet" href="css/addbook.css">        
         <link rel="stylesheet" href="css/about.css">
         <script src="/js/app.js"></script>
         <script src="/js/user.service.js"></script>
