--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,40 @@
 <html ng-app="theBukz">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>The Bukz</title>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-        <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
-        <link rel="stylesheet" href="/css/homepage.css"/>
-        <link rel="stylesheet" href="/css/managebooks.css"/>
-        <link rel="stylesheet" href="/css/bookinfo.css"/>
-        <link rel="stylesheet" href="css/addbook.css">        
-        <link rel="stylesheet" href="css/about.css">
-        <script src="/js/app.js"></script>
-        <script src="/js/user.service.js"></script>
-        <script src="/js/book.service.js"></script>
-        <script src="/js/authController.js"></script>
-        <script src="/js/registerController.js"></script>
-        <script src="/js/homeController.js"></script>
-        <script src="/js/book.service.js"></script>
-        <script src="/js/manageBooksController.js"></script>
-        <script src="/js/addBookController.js"></script>
-        <script src="/js/bookController.js"></script>
-    </head>
 
-    <body ng-controller="authController">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>The Bukz</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.js"></script>
+    <link rel="stylesheet" href="/css/homepage.css" />
+    <link rel="stylesheet" href="/css/managebooks.css" />
+    <link rel="stylesheet" href="/css/bookinfo.css" />
+    <link rel="stylesheet" href="css/addbook.css">
+    <link rel="stylesheet" href="css/about.css">
+    <script src="/js/app.js"></script>
+    <script src="/js/user.service.js"></script>
+    <script src="/js/book.service.js"></script>
+    <script src="/js/authController.js"></script>
+    <script src="/js/registerController.js"></script>
+    <script src="/js/homeController.js"></script>
+    <script src="/js/book.service.js"></script>
+    <script src="/js/manageBooksController.js"></script>
+    <script src="/js/addBookController.js"></script>
+    <script src="/js/bookController.js"></script>
+</head>
+
+<body ng-controller="authController">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -41,19 +42,20 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">The Bukz</a>
-                </div>
+            </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" class="form-control" placeholder="Search">
                     </div>
                     <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Search</button>
                 </form>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#!/about">About Us</a></li>
+                    <li><a href="#!/about">About Us</a>
+                    </li>
                 </ul>
 
                 <div class="navbar-right">
@@ -63,15 +65,17 @@
                     <a href="#!/addbukz" class="btn btn-primary" ng-show="getAuth()" ng-click="hideAddBook()" role="button">add-book</a>
                     <button type="button" ng-show="getAuth()" class="btn btn-primary navbar-btn" ng-click="signOut()">Sign Out</button>
                 </div>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 
-        <div id="signInModal" class="modal fade" role="dialog" >
-            <div class="modal-dialog">
+    <div id="signInModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
 
-                <!-- Modal content-->
-                <div class="modal-content">
+            <!-- Modal content-->
+            <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Sign In With : </h4>
@@ -83,12 +87,13 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
-                </div>
-
             </div>
+
         </div>
+    </div>
 
-        <ui-view></ui-view>
+    <ui-view></ui-view>
 
-    </body>
+</body>
+
 </html>
