--- a/public/addBook.html
+++ b/public/addBook.html
@@ -3,10 +3,10 @@
         <div class="row from-group">
             <div class="col-md-2">
                 <img id="add-book-img-upload" class="img-responsive" src="/images/book-thumbnail.jpg" alt="book image" />
-                <progress class="progress-bar" value="0" max="100" id="uploader"></progress>
+                <progress class="add-book-progress-bar" value="0" max="100" id="uploader"></progress>
             </div>
             <div class="col-md-2 text-center">
-                <span class="btn btn-default btn-file add-book-upload-btn">
+                <span class="btn btn-default add-book-upload-btn">
                             Upload Image <input ng-model="photo" onchange="angular.element(this).scope().file_changed(this)" type="file" accept="image/*">
                         </span>
             </div>
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
             <label>Pages : </label>
-            <input class="form-control" type="number" ng-model="pages" />
+            <input class="form-control" type="number" min="1" ng-model="pages" />
         </div>
 
         <div class="form-group">
@@ -50,7 +50,7 @@
         </div>
         <div class="form-group">
             <label>Description : </label>
-            <textarea class="form-control" rows="5" ng-model="descriptions"></textarea>
+            <textarea class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
         </div>
         <input type="submit" class="btn btn-primary" />
         <div ng-show="error" class="alert alert-danger add-book-alert"><strong>Caution : </strong> {{error}}</div>
