--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -5,15 +5,15 @@
                 <img style="max-width: 200px" ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}" class="img-responsive" />
             </div>
             <div class="col-md-5 manage-books-detail">
-                <h4><b>Title:</b>{{book.bookName}}</h4>
-                <p><b>Author:</b>{{book.authorName}}</p>
-                <p><b>Price:</b>₹{{book.price}}</p>
+                <h4><b>Title: </b>{{book.bookName}}</h4>
+                <p><b>Author: </b>{{book.authorName}}</p>
+                <p><b>Price: </b>₹{{book.price}}</p>
                 <p><b>Edition: </b>{{book.edition}}</p>
                 <p><b>Publication: </b>{{book.publication}}</p>
                 <p><b>ISBN: </b>{{book.isbn}}</p>
                 <p><b>Binding: </b>{{book.binding}}</p>
                 <p>
-                    <b>Description: </b> {{book.descriptions}}
+                    <b>Description:</b> {{book.descriptions}}
                 </p>
                 <div class="manage-books-button-group">
                     <button class="btn btn-warning" ng-click="myPreBook(book.$id)" data-toggle="modal" data={{book.$id}} data-target="#editBook">Edit <span class="glyphicon glyphicon-pencil" ></span></button>
@@ -41,30 +41,38 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="editBook" role="dialog" tabindex="-1" aria-hidden="true">
+    <div class="modal fade edit-book-info-modal" id="editBook" role="dialog" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog" style="background-color: white;">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h3>Edit your Book</h3>
             </div>
+
+            <!-- Modal for edit book info -->
             <div class="modal-body" role="form">
                 <form ng-submit="editBukz()">
-                    <div class="form-group">
-                        <img id="blah" ng-src="{{bookPicture}}" alt="your image" />
-                        <br>
-                        <progress value="100" max="100" id="uploader"></progress>
-                        <input ng-model="photo" onchange="angular.element(this).scope().file_changed(this)" type="file" accept="image/*" />
+                    <div class="row from-group">
+                        <div class="col-md-4">
+                            <img id="edit-book-img-upload" class="img-responsive" ng-src="{{bookPicture}}" alt="book image" />
+                            <progress class="edit-book-progress-bar" value="0" max="100" id="uploader"></progress>
+                        </div>
+                        <div class="col-md-2 text-center edit-book">
+                            <span class="btn btn-default edit-book-upload-btn">
+                                Upload Image <input ng-model="photo" onchange="angular.element(this).scope().file_changed(this)" type="file" accept="image/*">
+                            </span>
+                        </div>
                     </div>
+                    <br/>
                     <div class="form-group">
-                        <label> Book Name : </label>
+                        <label>Book Name : </label>
                         <input class="form-control" type="text" ng-model="bookName" />
                     </div>
                     <div class="form-group">
-                        <label>Author Name : </label>
+                        <label>Author : </label>
                         <input class="form-control" type="text" ng-model="authorName" />
                     </div>
                     <div class="form-group">
-                        <label>publication : </label>
+                        <label>Publication : </label>
                         <input class="form-control" type="text" ng-model="publication" />
                     </div>
                     <div class="form-group">
@@ -73,33 +81,33 @@
                     </div>
                     <div class="form-group">
                         <label>Pages : </label>
-                        <input class="form-control" type="number" ng-model="pages" />
+                        <input class="form-control" min="1" type="number" ng-model="pages" />
                     </div>
                     <div class="form-group">
-                        <label for="sel1">Binding:</label>
+                        <label for="sel1">Binding : </label>
                         <select class="form-control" ng-model="binding">
-                    <option>Papaerback</option>
-                    <option>Hardcover</option>
-                </select>
+                            <option>Papaerback</option>
+                            <option>Hardcover</option>
+                        </select>
                     </div>
                     <div class="form-group">
-                        <label>ISBN:</label>
+                        <label>ISBN : </label>
                         <input class="form-control" type="number" ng-model="isbn" />
                     </div>
                     <div class="form-group">
                         <label>Price : </label>
-                        <input class="form-control" type="number" ng-model="price" />
+                        <input class="form-control" type="number" min="0" ng-model="price" />
                     </div>
                     <div class="form-group">
-                        <label>Description:</label>
-                        <textarea class="form-control" rows="5" ng-model="descriptions"></textarea>
+                        <label>Description : </label>
+                        <textarea class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
                     </div>
 
                     <div class="modal-footer">
                         <input type="submit" class="btn btn-primary" ng-click="cancel()" />
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <div ng-show="error" class="alert alert-danger"><strong>Caution : </strong> {{error}}</div>
                     </div>
+                    <div ng-show="error" class="alert alert-danger"><strong>Caution : </strong> {{error}}</div>
                 </form>
             </div>
         </div>
