--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -16,8 +16,10 @@
                     <b>Description:</b> {{book.descriptions}}
                 </p>
                 <div class="manage-books-button-group">
-                    <button class="btn btn-warning" ng-click="myPreBook(book.$id)" data-toggle="modal" data={{book.$id}} data-target="#editBook">Edit <span class="glyphicon glyphicon-pencil" ></span></button>
-                    <button class="btn btn-danger" data-toggle="modal" data={{book.$id}} data-target="#deleteBook" ng-click="deleteBook(book.$id)">Remove <span class="glyphicon glyphicon-trash" ></span></button>
+                    <button class="btn btn-warning" ng-click="myPreBook(book.$id)" data-toggle="modal" data={{book.$id}} data-target="#editBook">Edit <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <button class="btn btn-danger" data-toggle="modal" data={{book.$id}} data-target="#deleteBook" ng-click="deleteBook(book.$id)">Remove <span class="glyphicon glyphicon-trash"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -64,7 +66,7 @@
                     </div>
                     <br/>
                     <div class="form-group">
-                        <label>Book Name : </label>
+                        <label> Book Name : </label>
                         <input class="form-control" type="text" ng-model="bookName" />
                     </div>
                     <div class="form-group">
@@ -84,7 +86,7 @@
                         <input class="form-control" min="1" type="number" ng-model="pages" />
                     </div>
                     <div class="form-group">
-                        <label for="sel1">Binding : </label>
+                        <label>Binding : </label>
                         <select class="form-control" ng-model="binding">
                             <option>Papaerback</option>
                             <option>Hardcover</option>
