--- a/public/addBook.html
+++ b/public/addBook.html
@@ -50,7 +50,7 @@
         </div>
         <div class="form-group">
             <label>Description : </label>
-            <textarea class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
+            <textarea style="resize:none" class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
         </div>
         <input type="submit" class="btn btn-primary" />
         <div ng-show="error" class="alert alert-danger add-book-alert"><strong>Caution : </strong> {{error}}</div>
