--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="form-group">
                         <label>Description : </label>
-                        <textarea class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
+                        <textarea style="resize:none" class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
                     </div>
 
                     <div class="modal-footer">
