--- a/public/addBook.html
+++ b/public/addBook.html
@@ -36,8 +36,8 @@
         <div class="form-group">
             <label>Binding : </label>
             <select class="form-control" ng-model="binding">
-                <option>Papaerback</option>
-                <option>Hardcover</option>
+                <option value="Paperback">Papaerback</option>
+                <option value="Hardcover">Hardcover</option>
             </select>
         </div>
         <div class="form-group">
