--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -21,9 +21,9 @@
                     <b>Description:</b> {{book.descriptions}}
                 </p>
                 <div class="manage-books-button-group">
-                    <button class="btn btn-warning" ng-click="myPreBook(book.$id)" data-toggle="modal" data={{book.$id}} data-target="#editBook">Edit <span class="glyphicon glyphicon-pencil"></span>
+                    <button class="btn btn-warning" ng-click="myPreBook(book.$id)" data-toggle="modal" data={{book.$id}} data-target="#editBook"> <span class="glyphicon glyphicon-pencil"></span> EDIT
                     </button>
-                    <button class="btn btn-danger" data-toggle="modal" data={{book.$id}} data-target="#deleteBook" ng-click="deleteBook(book.$id)">Remove <span class="glyphicon glyphicon-trash"></span>
+                    <button class="btn btn-danger" data-toggle="modal" data={{book.$id}} data-target="#deleteBook" ng-click="deleteBook(book.$id)"><span class="glyphicon glyphicon-trash"></span> REMOVE 
                     </button>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="form-group">
                         <label>Pages : </label>
-                        <input class="form-control" min="1" type="number" ng-model="pages" />
+                        <input class="form-control" min="1" type="number" ng-model="pages"/>
                     </div>
                     <div class="form-group">
                         <label>Binding : </label>
@@ -99,11 +99,11 @@
                     </div>
                     <div class="form-group">
                         <label>ISBN : </label>
-                        <input class="form-control" type="number" ng-model="isbn" />
+                        <input class="form-control" type="number" min="0" ng-model="isbn" max="9999999999" />
                     </div>
                     <div class="form-group">
                         <label>Price : </label>
-                        <input class="form-control" type="number" min="0" ng-model="price" />
+                        <input class="form-control" type="number" min="0" ng-model="price"  />
                     </div>
                     <div class="form-group">
                         <label>Description : </label>
