--- a/public/about.html
+++ b/public/about.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container about-page">
     <div class="row">
         <div class="col-md-12 text-left">
             <h1><p>About us</p></h1>
