--- a/public/book.html
+++ b/public/book.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container book-info-page">
     <div class="row">
         <div class="col-md-6">
             <img style="max-width: 300px; margin: auto;" class="img-responsive" ng-src="{{book.imageUrl}}" alt="Image for {{book.bookName}}" id="book-info-img" />
