--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container manage-books-page">
             <div ng-show="books==''" class="alert alert-warning">
                 <h4>
                     <strong>Oops!</strong> Nothing book is here.
