--- a/public/register.html
+++ b/public/register.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container register-page">
     <form ng-submit="register()">
         <div class="form-group text-center">
             <img width="100px" ng-src="{{userPicture}}" />
