--- a/public/addBook.html
+++ b/public/addBook.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container addbook-page">
     <form ng-submit="addbukz()">
         <div class="row from-group">
             <div class="col-md-2">
