--- a/public/manage-books.html
+++ b/public/manage-books.html
@@ -1,7 +1,7 @@
 <section class="container manage-books-page">
             <div ng-show="books==''" class="alert alert-warning">
                 <h4>
-                    <strong>Oops!</strong> Nothing book is here.
+                    <strong>Oops!</strong> Nothing is here.
                 </h4>
             </div>
     <div ng-repeat="book in books">
